[project]
name = "comfyui-j"
description = "This is a completely different set of nodes than Comfy's own KSampler series. This set of nodes is based on Diffusers, which makes it easier to import models, apply prompts with weights, inpaint, reference only, controlnet, etc."
version = "1.1.0"
license = "LICENSE"
dependencies = ["compel", "diffusers", "numpy"]

[project.urls]
Repository = "https://github.com/Jannchie/ComfyUI-J"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-J"
Icon = ""
